Removed the roles

--- a/src/main/webapp/pages/registration.html
+++ b/src/main/webapp/pages/registration.html
@@ -74,10 +74,7 @@
 													<select class="form-control" name="role" ng-model="userDetails.roleDetails.roleId" id="role" required>
 														<option value="">Select</option>
 														<option value="1" id="role_super_dd">Super User</option>
-														<option value="2" id="role_stq_ves_dd">STQ User VES</option>
-														<option value="3" id="role_stq_fed_dd">STQ User FED</option>
-														<option value="4" id="role_gl_ves_dd">GL User VES</option>
-														<option value="5" id="role_gl_fed_dd">GL User FED</option>
+														<option value="2" id="role_stq_ves_dd">User</option>														
 													</select>
 												</div>
 											</div>
