--- a/src/main/webapp/pages/login.html
+++ b/src/main/webapp/pages/login.html
@@ -42,7 +42,7 @@
 			<br/>
                 <div class="login-panel">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Sign in</h3>
+                        <h3 class="panel-title">Sign in to UM</h3>
                     </div>
                     <div class="panel-body">
                         <form name="loginForm" role="form" novalidate>
