Fix in the syntax error

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,7 +21,7 @@
 	<script src="js/angular-cookies.js"></script>
 	<script src="js/dirPagination.js"></script>
 	<script src="js/ngStorage.js"></script>
-  <script src="js/angular-mocks.js"</script>
+        <script src="js/angular-mocks.js"></script>
 
 
 	<script src="js/controllers/loginController.js"></script>
