--- a/src/main/webapp/pages/welcome.html
+++ b/src/main/webapp/pages/welcome.html
@@ -9,7 +9,7 @@
 		  
 			<div class="row">
                 <div class="col-lg-12">
-					<h1>{{welcomeMsg}} {{loginUserName}}</h1>
+					<h1 id="welcome_msg_lbl">{{welcomeMsg}} {{loginUserName}}</h1>
                 </div>
             </div>
         <!-- /.row -->
