--- a/src/main/webapp/pages/header.html
+++ b/src/main/webapp/pages/header.html
@@ -13,8 +13,8 @@
                 </a>
             </div>
 			
-			<!-- Secondary authorization  
-			<ul class="nav navbar-top-links navbar-right" ng-show="(defaultPassword == 1) && (secondaryAuthorization == 1)"> -->
+			  
+			<ul class="nav navbar-top-links navbar-right" ng-show="(defaultPassword == 1) && (secondaryAuthorization == 1)"> 
 			<ul class="nav navbar-top-links navbar-right">
 				<li class="dropdown">
 					<a class="dropdown-toggle btn btn-primary" data-toggle="dropdown" id="users_tab">
@@ -45,7 +45,7 @@
 				</li>
 			</ul>
 			
-			<!-- Secondary authorization  <ul class="nav navbar-top-links navbar-right" ng-show="(defaultPassword == 0) || (secondaryAuthorization == 0)">
+			 <ul class="nav navbar-top-links navbar-right" ng-show="(defaultPassword == 0) || (secondaryAuthorization == 0)">
 				<li class="dropdown">
                     <a class="dropdown-toggle btn btn-primary" data-toggle="dropdown" id="user_details_tab">
                         <i class="fa fa-user fa-fw user1"></i> {{loginUserName}} <i class="fa fa-caret-down"></i>
@@ -55,7 +55,7 @@
                     </ul>
                     
                 </li>
-			</ul> -->
+			</ul> 
 			
         </div>
 		<script>
