Rollback of SA funcationality

--- a/src/main/webapp/pages/header.html
+++ b/src/main/webapp/pages/header.html
@@ -13,8 +13,8 @@
                 </a>
             </div>
 			<!-- START: Uncomment to enable SA -->
-			<ul class="nav navbar-top-links navbar-right" ng-show="(defaultPassword == 1) && (secondaryAuthorization == 1)"> 
-			<!--<ul class="nav navbar-top-links navbar-right">-->
+			<!--<ul class="nav navbar-top-links navbar-right" ng-show="(defaultPassword == 1) && (secondaryAuthorization == 1)"> -->
+			<ul class="nav navbar-top-links navbar-right">
 			<!-- END: Uncomment to enable SA -->
 				<li class="dropdown">
 					<a class="dropdown-toggle btn btn-primary" data-toggle="dropdown" id="users_tab">
@@ -45,7 +45,7 @@
 				</li>
 			</ul>
 			<!-- START: Uncomment to enable SA -->
-			 <ul class="nav navbar-top-links navbar-right" ng-show="(defaultPassword == 0) || (secondaryAuthorization == 0)">
+			 <!--<ul class="nav navbar-top-links navbar-right" ng-show="(defaultPassword == 0) || (secondaryAuthorization == 0)">
 				<li class="dropdown">
                     <a class="dropdown-toggle btn btn-primary" data-toggle="dropdown" id="user_details_tab">
                         <i class="fa fa-user fa-fw user1"></i> {{loginUserName}} <i class="fa fa-caret-down"></i>
@@ -54,7 +54,7 @@
                         <li><a ng-click="logout()" id="user_logout_dd"><i class="fa fa-sign-out fa-fw logout-icon"></i> Sign out</a></li>
                     </ul>                    
                 </li>
-			</ul> 
+			</ul> -->
 			<!-- END: Uncomment to enable SA -->
         </div>
 		<script>
