--- a/src/main/webapp/pages/header.html
+++ b/src/main/webapp/pages/header.html
@@ -44,7 +44,7 @@
 				</li>
 			</ul>
 			
-			<!--<ul class="nav navbar-top-links navbar-right" ng-show="(defaultPassword == 0) || (secondaryAuthorization == 0)">
+			<ul class="nav navbar-top-links navbar-right" ng-show="(defaultPassword == 0) || (secondaryAuthorization == 0)">
 				<li class="dropdown">
                     <a class="dropdown-toggle btn btn-primary" data-toggle="dropdown" id="user_details_tab">
                         <i class="fa fa-user fa-fw user1"></i> {{loginUserName}} <i class="fa fa-caret-down"></i>
@@ -54,7 +54,7 @@
                     </ul>
                     
                 </li>
-			</ul>-->
+			</ul>
 			
         </div>
 		<script>
